tests/ui/macros/macro-missing-fragment.stderr
error: missing fragment specifier
  --> $DIR/macro-missing-fragment.rs:4:20
   |
LL |     ( $( any_token $field_rust_type )* ) => {};
   |                    ^^^^^^^^^^^^^^^^
   |
   = note: fragment specifiers must be provided
   = help: valid fragment specifiers are `ident`, `block`, `stmt`, `expr`, `pat`, `ty`, `lifetime`, `literal`, `path`, `meta`, `tt`, `item` and `vis`, along with `expr_2021` and `pat_param` for edition compatibility
help: try adding a specifier here
   |
LL |     ( $( any_token $field_rust_type:spec )* ) => {};
   |                                    +++++

error: missing fragment specifier
  --> $DIR/macro-missing-fragment.rs:9:7
   |
LL |     ( $name ) => {};
   |       ^^^^^
   |
   = note: fragment specifiers must be provided
   = help: valid fragment specifiers are `ident`, `block`, `stmt`, `expr`, `pat`, `ty`, `lifetime`, `literal`, `path`, `meta`, `tt`, `item` and `vis`, along with `expr_2021` and `pat_param` for edition compatibility
help: try adding a specifier here
   |
LL |     ( $name:spec ) => {};
   |            +++++

error: missing fragment specifier
  --> $DIR/macro-missing-fragment.rs:13:7
   |
LL |     ( $name ) => {};
   |       ^^^^^
   |
   = note: fragment specifiers must be provided
   = help: valid fragment specifiers are `ident`, `block`, `stmt`, `expr`, `pat`, `ty`, `lifetime`, `literal`, `path`, `meta`, `tt`, `item` and `vis`, along with `expr_2021` and `pat_param` for edition compatibility
help: try adding a specifier here
   |
LL |     ( $name:spec ) => {};
   |            +++++

error: missing fragment specifier
  --> $DIR/macro-missing-fragment.rs:17:13
   |
LL |     ( $test:$tt ) => {};
   |             ^
   |
   = note: fragment specifiers must be provided
   = help: valid fragment specifiers are `ident`, `block`, `stmt`, `expr`, `pat`, `ty`, `lifetime`, `literal`, `path`, `meta`, `tt`, `item` and `vis`, along with `expr_2021` and `pat_param` for edition compatibility
help: fragment specifiers should not be prefixed with `$`
   |
LL -     ( $test:$tt ) => {};
LL +     ( $test:tt ) => {};
   |

error: aborting due to 4 previous errors

